Add a powermeter to Tiberian Sun.

--- a/mods/ts/chrome.yaml
+++ b/mods/ts/chrome.yaml
@@ -46,6 +46,15 @@ cash-icons:
 		cash-normal: 68, 51, 16, 16
 		cash-critical: 85, 51, 16, 16
 
+power-meter:
+	Inherits: ^Chrome
+	Regions:
+		none: 401,6,10,2
+		available: 401,0,10,2
+		used: 401,3,10,2
+		danger: 401,3,10,2
+		disabled: 401,6,10,2
+
 # ----------------------------------------------------------------------
 # GDI
 # ----------------------------------------------------------------------
